--- a/newjips_Backend/src/main/resources/application.properties
+++ b/newjips_Backend/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://3.36.96.177:3306/newjips
-jdbc.username=newjeans
-jdbc.password=timmy1029
+#jdbc.url=jdbc:mysql://3.36.96.177:3306/newjips
+#jdbc.username=newjeans
+#jdbc.password=timmy1029
+
+jdbc.url=jdbc:mysql://localhost:3306/newjips_db?serverTimezone=UTC
+jdbc.username=root
+jdbc.password=1234
 mybatis.config-location=classpath:mybatis-config.xml
 kakao.api.key=ed7fdc86b3925495f826e15dc7a00aee
 
